test/e2e/suites/tcp-ao/targets.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target-tao
  labels:
    app: target-tao
spec:
  replicas: 2
  selector:
    matchLabels:
      app: target-tao
  template:
    metadata:
      labels:
        app: target-tao
      annotations:
        k8s.v1.cni.cncf.io/networks: app-net-b
    spec:
      serviceAccountName: meridio-2-network-sidecar
      containers:
      - name: example-target
        image: registry.nordix.org/cloud-native/meridio-2/example-target:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/bash", "-c"]
        args:
        - |
          screen -d -m bash -c "./ctraffic -server -address [::]:5000" ;
          screen -d -m bash -c "./ctraffic -server -udp -address [::]:5001" ;
          tail -f /dev/null
        securityContext:
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
            add: ["DAC_OVERRIDE", "NET_RAW", "SYS_PTRACE"]
      - name: network-sidecar
        image: registry.nordix.org/cloud-native/meridio-2/network-sidecar:latest
        imagePullPolicy: IfNotPresent
        args:
        - --pod-name=$(POD_NAME)
        - --pod-namespace=$(POD_NAMESPACE)
        - --pod-uid=$(POD_UID)
        - --log-level=debug
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_UID
          valueFrom:
            fieldRef:
              fieldPath: metadata.uid
        securityContext:
          capabilities:
            drop: ["ALL"]
            add: ["NET_ADMIN"]
